# FinanzasMMEX

./: .gitignore  .secrets.baseline  AGENTS.md  CLAUDE.md  Ctmppytest_out.txt  FinanzasMMEX.slnx  PLAN.md  PLAN2.md  README.md  implementation_plan.md  linux.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: README.md  agent-orchestrator.md  cli-contract-checker.md  fixtures-anonymizer.md  mmex-writer-guard.md  parser-reviewer.md  secrets-pii-auditor.md  staging-schema-validator.md  wpf-ui-reviewer.md
.codex/agents/: agent-orchestrator.toml  cli-contract-checker.toml  fixtures-anonymizer.toml  mmex-writer-guard.toml  parser-reviewer.toml  wpf-ui-reviewer.toml  (+2 more)
contracts/: CHANGELOG.md  envelope.schema.json
docs/: multiuser-contract.md
tareas/: a-hacer.md  lecciones.md
temp_pdf_read/: package-lock.json  package.json  pdf_content.txt  pdf_content2.txt  pdf_content2_utf8.txt  pdf_content_utf8.txt  read.js
tests/: test_be_email.py  test_cli_contract.py  test_cli_quickadd.py  test_cli_review.py  test_cmr_email.py  test_etl_categorize.py  test_etl_merge.py  test_etl_phase1.py  test_etl_transfers.py  test_job_transfers.py  test_llm_fallback.py  test_mach_email.py  test_mmex_sql_writer.py  test_mp_api.py  test_mp_online_job.py  test_ofx_export.py  test_ownership.py  test_phase1_job.py  test_phase3_reconcile.py  test_phase3_scraping_errors.py  test_phase3_scraping_jobs.py  test_phase3_scraping_parsers.py  test_phase4_drop_job.py  test_phase4_file_loaders.py  test_phase4_foundation.py  test_phase4_notifications.py  test_phase4_reports.py  test_staging.py
(+114 files in other folders)
