[project]
name = "finanzasmmex"
version = "0.1.0"
description = "Motor financiero híbrido para consolidación de transacciones y sincronización con Money Manager Ex."
authors = [
    { name = "Ricardo", email = "ricardo@example.com" }
]
dependencies = [
    "pydantic>=2.0.0",
    "structlog>=23.1.0",
    "keyring>=24.2.0",
    "google-api-python-client>=2.90.0",
    "google-auth-oauthlib>=1.0.0",
    "mercadopago>=2.2.0",
    "rapidfuzz>=3.1.1",
    "playwright>=1.35.0",
    "httpx>=0.24.1",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "black>=24.0.0",
    "mypy>=1.5.0",
    "detect-secrets>=1.4.0",
    "types-google-cloud-ndb>=1.11.0.2",
]

[project.scripts]
finanzasmmex = "finanzasmmex.cli:main"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["tests/agent_cases"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py311"]
